--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <h3>RESUME</h3>
             <div id="skills">
                 <p>Click down below on link to dowland My resume<br>
-                 <span style="font-size: 20px;"><a  href="./bucket-policy.doc" download>Downlaod Resume</a></span>
+                 <span style="font-size: 20px;"><a  href="./Manmohan Resume.docx" download>Downlaod Resume</a></span>
                 </p>
             </div>
             <div>
